--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -9,10 +9,11 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorShop.Client.styles.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Еще буквально чуть-чуть и всё будет...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
