feat: Group Order Quantity

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BlazorShop</title>
+    <title>Самый популярный в мире магазин ключей, сделанный не на коленках.</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
@@ -21,6 +21,11 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        window.setTitle = (title) => {
+            document.title = title;
+        }
+    </script>
 </body>
 
 </html>
